# kuku

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs-translate-en-changes.yml  docs-translate-open-pr.yml  docs-translate.yml  release.yml  web-ci.yml
.kuku/skills/docs-translate/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: display.rs  main.rs
apps/kuku/: Cargo.toml
apps/kuku/src/: main.rs  web.rs
apps/server/: Cargo.toml
apps/server/src/: config_watcher.rs  error_mapping.rs  main.rs  run_manager.rs
apps/server/tests/: events_test.rs  health_test.rs  responses_test.rs  runs_test.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: cli_args.rs  display.rs  lib.rs
apps/terminal/src/commands/: agents.rs  config.rs  events.rs  init.rs  list.rs  mod.rs  prompts.rs  run.rs  show.rs
apps/terminal/src/tui/: mod.rs
apps/terminal/tests/: display_rendering.rs
apps/web/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/kuku/: Cargo.toml
crates/kuku-cli/: Cargo.toml  build.rs
crates/kuku-cli/src/: cli_args.rs  display.rs  lib.rs
crates/kuku-cli/src/commands/: agents.rs  delete.rs  events.rs  list.rs  mod.rs  prompts.rs  run.rs  show.rs  skills.rs  undo.rs
crates/kuku-cli/src/commands/run/: tests.rs
crates/kuku-cli/src/display/: event.rs  json.rs  mod.rs  text.rs  util.rs
crates/kuku-cli/tests/: display_rendering.rs
crates/kuku-server/: Cargo.toml
crates/kuku-server/src/: config_watcher.rs  lib.rs  run_manager.rs  server_args.rs  wire.rs
crates/kuku-server/src/routes/: events.rs  health.rs  mod.rs  responses.rs  runs.rs  sessions.rs
crates/kuku-server/tests/: events_test.rs  health_test.rs  responses_test.rs  runs_test.rs
crates/kuku-server/tests/common/: mock_provider.rs  mod.rs  stream.rs
crates/kuku/assets/: default-config.toml
crates/kuku/prompts/: fetch-web.md  handoff-context.md  handoff-instruction.md  handoff_instruction.md  notice-context-drift.md  notice-skill-changed.md  project-context.md  project-memory.md  runtime-context.md  session_query_guidance.md  synthetic-user.md  system.md  tool-guidance.md
crates/kuku/prompts/agents/: explore.md  main.md  review.md
crates/kuku/prompts/blocks/: agent-catalog.md  conversation-inbox.md  hook-context.md  memory.md  notice-agent-directory.md  notice-context-drift.md  notice-inbox.md  notice-loaded-skills.md  notice-open-conversations.md  project-policy.md  runtime-notices.md  system-notice.md  tool-guidance.md
crates/kuku/prompts/memory/: global.md
crates/kuku/prompts/tools/: fetch-web.md
crates/kuku/src/: config.rs  discovery.rs  error.rs  lib.rs  query.rs  test_support.rs  wire.rs
crates/kuku/src/agent/: catalog.rs  definition.rs  loader.rs  mod.rs  registry.rs  runtime.rs  session.rs
crates/kuku/src/config/: mod.rs  mutate.rs  resolve.rs  tests.rs  types.rs
crates/kuku/src/context/: assembly.rs  message.rs  mod.rs  provenance.rs  replay.rs  revert.rs  revert_tests.rs
crates/kuku/src/context/replay/: tests.rs
crates/kuku/src/conversation/: address.rs  binding.rs  mod.rs  reducer.rs
crates/kuku/src/event/: mod.rs  scan.rs  store.rs  types.rs
crates/kuku/src/event/types/: tests.rs
crates/kuku/src/log/: hub.rs  mod.rs  paths.rs  prune.rs  store.rs  types.rs
crates/kuku/src/notice/: assembly.rs  mod.rs  render.rs  types.rs
crates/kuku/src/permission/: gate.rs  mod.rs  policy.rs
crates/kuku/src/plugin/: executor.rs  hook.rs  loader.rs  manifest.rs  matcher.rs  mod.rs  output.rs  registry.rs
crates/kuku/src/prompt/: catalog.rs  mod.rs  render.rs
crates/kuku/src/provider/: anthropic.rs  chunk.rs  config.rs  error.rs  http_client.rs  mod.rs  openai_compat.rs  openai_responses.rs  sse.rs  trace.rs  types.rs
crates/kuku/src/query/: handoff.rs  helpers.rs  lifecycle.rs  mod.rs  provider.rs  run.rs  slots.rs  start.rs  step.rs  tool_exec.rs  types.rs
crates/kuku/src/query/run/: helpers.rs  tests.rs
crates/kuku/src/query/start/: startup_prune_tests.rs
crates/kuku/src/session/: environment.rs  id.rs  list.rs  mod.rs  paths.rs
crates/kuku/src/skill/: catalog.rs  definition.rs  loader.rs  mod.rs  registry.rs  search.rs  session.rs
crates/kuku/src/subagent/: catalog.rs  definition.rs  kuku_format.rs  loader.rs  mod.rs  registry.rs  session.rs
crates/kuku/src/subagent/compat/: claude_code.rs  opencode.rs
crates/kuku/src/tool/: builtin.rs  dispatch.rs  mod.rs  registry.rs  result.rs
crates/kuku/src/tool/builtin/: common.rs  edit_file.rs  fetch_url.rs  fetch_web.rs  find_files.rs  memory.rs  mod.rs  query_session.rs  read_file.rs  run_command.rs  search_text.rs  test_helpers.rs  write_file.rs
crates/kuku/src/tool/builtin/query_session/: tests.rs
crates/kuku/src/util/: path.rs  yaml.rs
crates/kuku/src/view/: events.rs  mod.rs  output.rs
crates/kuku/tests/: agent_catalog_tests.rs  agent_registry_tests.rs  cache_runtime_notices.rs  config_file.rs  context_rebuild.rs  delete_session.rs  event_store.rs  external_prompts.rs  list_sessions.rs  permission_model.rs  provider_adapters.rs  provider_config.rs  provider_error.rs  provider_integration.rs  provider_live.rs  provider_manual.rs  provider_types.rs  query_api.rs  query_runtime.rs  session_id_format.rs  session_paths.rs  subagent_catalog_tests.rs  subagent_registry_tests.rs  view_events.rs  view_output.rs
crates/kuku/tests/common/: mod.rs
docs/: AGENTS.md  README.md  index.md
docs/en/: README.md  glossary.md  index.md  prompt.md
docs/zh/: index.md
scripts/: install.ps1  install.sh
scripts/docs-translate/: .env.example  Dockerfile  README.md  check-in-container.sh  config.toml  open-pr-from-body.sh  pr-body-template.md  render-run-stats.sh  report-docs-en-changes.sh  run-local-check.sh  test-open-pr-from-body.sh  test-render-run-stats.sh  translate-page-and-open-pr.sh
(+194 files in other folders)
