[package]
name = "kuku-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kuku"
path = "src/main.rs"

[dependencies]
kuku = { workspace = true }
kuku-cli = { path = "../../crates/kuku-cli", features = ["server"] }
kuku-server = { path = "../../crates/kuku-server" }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
home = { workspace = true }
axum = { workspace = true }
