[package]
name = "kuku-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified binary for the kuku coding agent"
repository = "https://github.com/Cloud370/kuku"
homepage = "https://github.com/Cloud370/kuku"
readme = "../../README.md"
keywords = ["agent", "coding", "terminal", "llm", "cli"]
publish = false

[[bin]]
name = "kuku"
path = "src/main.rs"

[dependencies]
kuku = { workspace = true }
kuku-cli = { path = "../../crates/kuku-cli", features = ["server"] }
kuku-server = { path = "../../crates/kuku-server" }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
home = { workspace = true }
axum = { workspace = true }
