[package]
name = "kuku-terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kuku"
path = "src/bin/kuku.rs"

[lib]
name = "kuku_terminal"
path = "src/lib.rs"

[dependencies]
kuku = { path = "../../crates/kuku" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
