[package]
name = "kuku-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for the kuku coding agent"
repository = "https://github.com/Cloud370/kuku"
homepage = "https://github.com/Cloud370/kuku"
readme = "../../README.md"
keywords = ["agent", "coding", "terminal", "llm", "cli"]

[lib]
name = "kuku_cli"
path = "src/lib.rs"

[[bin]]
name = "kuku-cli"
path = "src/bin/kuku-cli.rs"

[features]
server = ["kuku-server"]

[dependencies]
kuku = { workspace = true }
kuku-server = { path = "../kuku-server", optional = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", default-features = false, features = ["std", "formatting", "parsing"] }
