[package]
name = "kuku-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kuku-server"
path = "src/main.rs"

[dependencies]
kuku = { path = "../kuku" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
dirs = "6"
tokio-util = "0.7"

[dev-dependencies]
httpmock = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3"
