[package]
name = "kuku-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP server for the kuku coding agent"
repository = "https://github.com/Cloud370/kuku"
homepage = "https://github.com/Cloud370/kuku"
readme = "../../README.md"
keywords = ["agent", "coding", "terminal", "llm", "cli"]

[lib]
name = "kuku_server"
path = "src/lib.rs"

[[bin]]
name = "kuku-server"
path = "src/bin/kuku-server.rs"

[dependencies]
kuku = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }
home = { workspace = true }

[dev-dependencies]
kuku = { workspace = true, features = ["test_support"] }
httpmock = "0.7"
wreq = { version = "6.0.0-rc.28", features = ["json", "stream"] }
tempfile = "3"
