[package]
name = "kuku"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "File-native agent runtime SDK"

[dependencies]
home = "0.5.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
regex = "1"
futures-core = "0.3"
tokio-stream = "0.1"
toml = "0.8"
toml_edit = "0.25"
tempfile = "3"

[dev-dependencies]
httpmock = "0.7"
