[package]
name = "kuku"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The agent explained — a readable Rust agent SDK"
repository = "https://github.com/Cloud370/kuku"
homepage = "https://github.com/Cloud370/kuku"
readme = "../../README.md"
keywords = ["agent", "coding", "terminal", "llm", "cli"]

[dependencies]
home = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
time = { version = "0.3", default-features = false, features = ["std", "formatting", "local-offset"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
regex = "1"
toml = "0.8"
toml_edit = "0.25"
tempfile = "3"

[dev-dependencies]
httpmock = "0.7"
