[package]
name = "kuku"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The agent explained — a readable Rust agent SDK"
repository = "https://github.com/Cloud370/kuku"
homepage = "https://github.com/Cloud370/kuku"
readme = "../../README.md"
keywords = ["agent", "coding", "terminal", "llm", "cli"]

[dependencies]
home = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
time = { version = "0.3", default-features = false, features = ["std", "formatting", "local-offset"] }
wreq = { version = "6.0.0-rc.28", default-features = false, features = ["json", "stream"] }
wreq-util = { version = "3.0.0-rc.11", features = ["emulation"] }
sha2 = "0.10"
regex = "1"
readability = { version = "0.3", default-features = false }
htmd = "0.5"
lru = "0.18"
url = "2"
toml = "0.8"
toml_edit = "0.25"
tempfile = "3"

[features]
default = []
test_support = []

[[test]]
name = "provider_integration"
required-features = ["test_support"]

[[test]]
name = "query_runtime"
required-features = ["test_support"]

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
